--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: EdgeNeXt
+description: Efficiently Amalgamated CNN-Transformer Architecture for Mobile Vision Applications
